# SFMLpractice

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
CMakeScripts/: ReRunCMake.make
SFMLpractice.xcodeproj/: project.pbxproj
SFMLpractice.xcodeproj/project.xcworkspace/xcuserdata/rosa.xcuserdatad/: UserInterfaceState.xcuserstate
SFMLpractice.xcodeproj/xcuserdata/rosa.xcuserdatad/xcschemes/: xcschememanagement.plist
